Grammar fixes + new model added

--- a/kursinis.tex
+++ b/kursinis.tex
@@ -40,7 +40,7 @@
 \pagenumbering{arabic}
 
 \sectionnonum{Įvadas}
-Nuo 2007, kai buvo pristatytas pirmasis iPhone jau praėjo kiek daugiau nei dešimt metų. Šio mobiliojo įrenginio, išmaniojo telefono (angl. Smartphone), pristatymas  iš esmės pakeitė mobiliųjų kompiuterių rinką. Iki tol asmeniniai skaitmeniai asistentai (angl. PDA personal digital asistant) buvo nei prieinami, nei labai naudingi įprastam vartotojui, todėl juos turėjo keletas verslo pasaulio žmonių, o paprastas vartotojas su savimi nešiojosi krūvą skirtingą funkcionalumą atliekančių prietaisų: MP3 grotuvų, Fotoaparatų, nešiojamųjų kompiuterių, telefonų. iPhone žadėjo delne telpantį kompiuterį kiekvienam už prieinamą kainą, ir savo pažadą įvykdė. Vienas po kito ėmė rastis  mobiliosios operacinės sistemos, turėjusios tiesiogiai konkuruoti su iPhone naudojama iOS,  kaip PalmOS, Symbian, Windows 7 mobile, vėliau tapusi 8 ir 8.1 bei Android. Mobiliųjų kompiuterių bei telefonų rinką užplūdo krūvos prieinamų įrenginių, kurie su kiekviena nauja laida savo skaičiavimo sugebėjimais artėja arčiau ir arčiau to ką gali atlikti staliniai kompiuteriai, ir iš pažiūros 2017 metų išmanusis įrenginys savo specifikacijomis „ant popieriaus“ jau seniai pranoko 2007 metų kompiuterį.
+Nuo 2007, kai buvo pristatytas pirmasis iPhone jau praėjo kiek daugiau nei dešimt metų. Šio mobiliojo įrenginio, išmaniojo telefono (angl. Smartphone), pristatymas  iš esmės pakeitė mobiliųjų kompiuterių rinką. Iki tol asmeniniai skaitmeniai asistentai (angl. PDA personal digital asistant) buvo nei prieinami, nei labai naudingi įprastam vartotojui, todėl juos turėjo keletas verslo pasaulio žmonių, o paprastas vartotojas su savimi nešiojosi krūvą skirtingą funkcionalumą atliekančių prietaisų: MP3 grotuvų, Fotoaparatų, nešiojamųjų kompiuterių, telefonų. iPhone žadėjo delne telpantį kompiuterį kiekvienam už prieinamą kainą, ir savo pažadą įvykdė. Vienas po kito ėmė rastis  mobiliosios operacinės sistemos, turėjusios tiesiogiai konkuruoti su iPhone naudojama iOS,  kaip PalmOS, Symbian, Windows 7 mobile, vėliau tapusi 8 ir 8.1 bei Android. Mobiliųjų kompiuterių bei telefonų rinką užplūdo gausa prieinamų įrenginių, kurie su kiekviena nauja laida savo skaičiavimo sugebėjimais artėja arčiau ir arčiau to ką gali atlikti staliniai kompiuteriai ir, iš pažiūros, 2017 metų išmanusis įrenginys savo specifikacijomis „ant popieriaus“ jau seniai pranoko 2007 metų kompiuterį.
 
 Nors šiandien iš gausaus operacinių sistemų pasirinkimo rinkoje iš esmės išlikę tik dvi: iOS ir Android, tačiau  išmaniųjų prietaisų populiarumas toli gražu neblėsta. 2016 metais pasaulyje jau buvo apie 2.1 mlrd. išmaniųjų telefonų naudotojų, o iki 2020 planuojama, jog šis skaičius sieks 2.87 mlrd.\cite {statista.com}. Esant didžulei įrenginių paklausai proporcingai kyla poreikis ir programinei įrangai pritaikytai šiems įrenginiams - mobiliosioms programoms.
 
@@ -73,7 +73,7 @@ M. Satyanarayanan dar 1996-aisiais savo straipsnyje apie mobiliuosius kompiuteri
    \item Riboti energijos ištekliai.
 \end{itemize}
 
-Iš esmės mobiliosios programos yra tokia programinė įranga, kuri veikia nešiojamame (mobiliame) įrenginyje. Tačiau į mobiliąją kompiuteriją žvelgiant per išmaniųjų telefonų prizmę mobiliųjų programų apibrėžimą galime sukonkretinti. Mobilioji programa (angl. mobile app) - programa suprojektuota veikti išmaniąjame telefone, planšetiniame kompiuteryje ar kitame mobiliame įrenginyje ir/arba, kaip įvestį, priimanti situacija paremtą (angl. context based) informaciją pvz. GPS signalas. \cite{6496451} Situacijos supratimas, naudojimasis situacine informacija ir gabėjimas keisti programos elgseną pagal gautus duomenis yra dar vienas esminis mobiliųjų programų, ypač skirtų išmaniesiems telefonams, skiriamasis bruožas.
+Iš esmės mobiliosios programos yra tokia programinė įranga, kuri veikia nešiojamame (mobiliame) įrenginyje. Tačiau į mobiliąją kompiuteriją žvelgiant per išmaniųjų telefonų prizmę mobiliųjų programų apibrėžimą galima sukonkretinti. Mobilioji programa (angl. mobile app) - programa suprojektuota veikti išmaniąjame telefone, planšetiniame kompiuteryje ar kitame mobiliame įrenginyje ir/arba, kaip įvestį, priimanti situacija paremtą (angl. context based) informaciją pvz. GPS signalas. \cite{6496451} Situacijos supratimas, naudojimasis situacine informacija ir gebėjimas keisti programos elgseną pagal gautus duomenis yra dar vienas esminis mobiliųjų programų, ypač skirtų išmaniesiems telefonams, skiriamasis bruožas.
 
 Remiantis šiais keturiais techniniais išskirtinumo bruožais, ir esminiu veikimo skirtumu galima pradėti išskirti problemines kokybės užtikrinimo sritis mobiliųjų programų kūrime. Laikant progamas išmaniesiems telefonams tyrimo baziniu objektu išskiriamos šios sritys:
 \begin{itemize}
@@ -87,39 +87,39 @@ Remiantis šiais keturiais techniniais išskirtinumo bruožais, ir esminiu veiki
 \end{itemize}
 
 \subsubsection{Ryšio sujungiamumo probleminė sritis}
-Sugebėjimas prisijungti prie mobiliojo ryšio stočių bei bevielio interneto taškų dažnai mobiliajai programai yra kritinis reikalavimas be kurio ši nesugebės funkcionuoti. Problema kyla dėl ryšio nepastovumo keliaujant. Keliaujant didelius atstumus vyksta persijungimai tarp mobilaus ryšio stotelių, vartotojas gali pakliūti į neryšio zoną, ar vietą kurioje veikia viso labo GPRS ar EDGE ryšys. Taip pat ir su bevielio interneto stotelėsmis, kurių dažna veikia vos 100m. spinduliu nesant jokiems trukdžiams. 
+Sugebėjimas prisijungti prie mobiliojo ryšio stočių bei bevielio interneto taškų dažnai mobiliajai programai yra kritinis reikalavimas be kurio ši nesugebės funkcionuoti. Problema kyla dėl ryšio nepastovumo keliaujant. Keliaujant didelius atstumus vyksta persijungimai tarp mobilaus ryšio stotelių, vartotojas gali pakliūti į neryšio zoną, ar vietą kurioje veikia viso labo GPRS ar EDGE ryšys. Taip pat ir su bevielio interneto stotelėmis, kurių dažna veikia vos 100m. spinduliu nesant jokiems trukdžiams. 
 
-Testuojant šioje srityje derėtų atsižvelgti į jau egzistuojančius ryšio defektus esančius specifiniame testavimui naudojamame įrenginyje, ar operacinėje sistemoje. \cite{android_bugs} Testuojant programas kurios smarkiai remiasi į įrenginio sugebėjimą prisijungti prie interneto ar mobiliojo ryšio tinklų atsiranda poreikis atlikti funkcinius testus įvairuose ryšio sujungiamumo scenarijuose. Pagrindinis siekis yra užtikrinti teisingą programos veikimą, net dingus ryšiui ar šiam staiga smarkiai sulėtėjus.
+Testuojant šioje srityje derėtų atsižvelgti į jau egzistuojančius ryšio defektus esančius specifiniame testavimui naudojamame įrenginyje, ar operacinėje sistemoje. \cite{android_bugs} Testuojant programas kurios priklausonuo įrenginio sugebėjimo prisijungti prie interneto ar mobiliojo ryšio tinklų atsiranda poreikis atlikti funkcinius testus įvairuose ryšio sujungiamumo scenarijuose. Pagrindinis siekis yra užtikrinti teisingą programos veikimą, net dingus ryšiui ar šiam staiga smarkiai sulėtėjus.
 
 \subsubsection{Ribotų išteklių probleminė sritis}
-Kol mobilieji įrenginiai tampa vis galinesni ir galingesni, jie vis dar negali pasivyti satcionariųjų bei nešiojamųjų kompiuterių. Pavyzdžiui vienas iš galingesnių šiuo metu rinkoje esančių telefonų, Samsung Galaxy s8+ turi 6GB atminties bei 8 branduolių, palaikančių 8 gijas, sistemą mikroschemoje (angl. system on a chip) į kurią integruoti vaizdo procesorius bei pagrindinis procesoriai. \cite{samsung_s8} Šiuo metu didžioji dauguma vartotojams prieinamų motininių plokščių kompiuteriams palaiko iki 64GB atminties, o intel neseniai atskleidė savo naujosios kartos i9 procesorių liniją, kur aukščiausios klasės procesorius sudarytas iš 18 branduolių bei 36 gijų. \cite{intel_i9}
+Kol mobilieji įrenginiai tampa vis galinesni ir galingesni, jie vis dar negali pasivyti satcionariųjų bei nešiojamųjų kompiuterių. Pavyzdžiui vienas iš galingesnių šiuo metu rinkoje esančių telefonų, Samsung Galaxy s8+ turi 6GB atminties bei 8 branduolių, palaikančių 8 gijas, sistemą mikroschemoje (angl. system on a chip) į kurią integruoti vaizdo procesorius bei pagrindinis procesoriai. \cite{samsung_s8} Šiuo metu didžioji dauguma vartotojams prieinamų motininių plokščių kompiuteriams palaiko iki 64GB atminties, o intel neseniai atskleidė savo naujosios kartos i9 procesorių liniją, kur aukščiausios klasės procesorius sudarytas iš 18 branduolių bei palaiko 36 gijas. \cite{intel_i9}
 
-Testuojant šioje srityje būtina atsižvelgti į išteklių įrenginyje naudojimą paleidžiant bei naudojant programą. Tai daroma siekiant išvengti staigių našumo sumažėjimų, neteisingo, nenumatyto programos ar įrenginio veikimo staiga imant naudoti 100\% prieinamų išteklių. Pagrindinis testavimo siekis užtikrinti teisingą programos bei įrenginio veikimą esant skaičiavimo išteklių trūkumui.
+Testuojant šioje srityje būtina atsižvelgti į išteklių įrenginyje panaudojimą paleidžiant bei naudojantis programa. Tai daroma siekiant išvengti staigių našumo sumažėjimų, neteisingo, nenumatyto programos ar įrenginio veikimo staiga imant naudoti 100\% prieinamų išteklių. Pagrindinis testavimo siekis užtikrinti teisingą programos bei įrenginio veikimą esant skaičiavimo išteklių trūkumui.
 
 \subsubsection{Draugiškumo vartotojui probleminė sritis}
-Kūrėjai kuriantys programas mobiliosioms operacinėms sistemos (Android, iOS) privalo sekti operacinių sistemų kūrėjo nusatytas varotojų sąsajos gaires. Dėl įrenginių gausos, skirtingų dydžių bei raiškos ekranų atsiranda grafinių neatitikimų tikimybė. 
+Kūrėjai kuriantys programas mobiliosioms operacinėms sistemos (Android, iOS) privalo sekti operacinių sistemų leidėjo nustatytas varotojų sąsajos gaires. Dėl įrenginių gausos, skirtingų dydžių bei raiškos ekranų atsiranda grafinių neatitikimų tikimybė. 
 
-Testuojant šioje srityje būtina testavimą atlikti ant daug skirtingų įrenginių, veikiančių su skirtingomis operacinės sistemos versijomis bei skirtingų raiškų bei dydžių ekranais.
+Testuojant šioje srityje būtina testavimą atlikti su daug skirtingų įrenginių, veikiančių su skirtingomis operacinės sistemos versijomis bei skirtingų raiškų ir dydžių ekranais.
 
 \subsubsection{Situacinio prisitaikymo probleminė sritis}
-Didelė dalis mobiliųjų programų remiasi duomenimis gautais priklausomai nuo situacijos, iš įvairių sensorių išmaniajame įrenginyje. Dažnai išmanieji įrenginiai turi įvairių sensorių, kaip, mikrofonai, šviesos jutikliai, akselerometrai bei giroskopai, vaizdo kameros. Tokie įrenginiai turi ir keletą būdų komunikuoti, susijunti su kitais prietaisais, internetu: bluetooth, wifi, 4G/LTE, NFC. Visi šie sensoriai gali suteikti prigramai krūvą informacijos realiu laiku, atsižvelgiant į tai ką vartotojas veikia su įrenginiu, ar kur jis tuo metu yra.
+Didelė dalis mobiliųjų programų remiasi duomenimis gautais priklausomai nuo situacijos, iš įvairių sensorių išmaniajame įrenginyje. Dažnai išmanieji įrenginiai keletą skirtingų sensorių, tokių kaip mikrofonai, šviesos jutikliai, akselerometrai bei giroskopai, vaizdo kameros. Tokie įrenginiai turi ir keletą būdų komunikuoti, susijungti su kitais prietaisais ar prisijungti prie interneto: bluetooth, wifi, 4G/LTE, NFC. Visi šie sensoriai gali suteikti programai daugybę informacijos realiu laiku, atsižvelgiant į tai kokius vartotojas veiksmus atlieka, ar kur jis tuo metu yra.
 
-Testuojant šioje srityje patikrinti visų įrenginių ir įvesčių kombinacijų praktiškai neįmanoma. Todėl testus reikia skirstyti į kontekstinius (angl. context-specific), bei nusistatyti užtektinus testų padengtumo kriterijus. Kuriant kontekstu paremtus testus, bei renkantis įrenginius su kuriais bus vykdomi testavimo atvejai verta atsižvelgti į konkrečiam įrenginiui būdingus ar operacinės sistemos versijai būdingus defektus. \cite{android_bugs}
+Testuojant šioje srityje patikrinti visų įrenginių ir įvesčių kombinacijų praktiškai neįmanoma. Todėl testus reikia skirstyti į kontekstinius (angl. context-specific) bei nusistatyti užtektinus testų padengtumo kriterijus. Kuriant kontekstu paremtus testus, bei renkantis įrenginius su kuriais bus vykdomi testavimo atvejai verta atsižvelgti į konkrečiam įrenginiui ar operacinės sistemos versijai būdingus defektus. \cite{android_bugs}
 
 \subsubsection{Įrenginių gausos probleminė sritis}
-Rinkoje, vartotojams prieinami šimtai skirtingų mobiliųjų įrenginių iš skirtingų gamintojų, veikiančių su skirtingomis operacinėmis sistemomis, surinktų iš skirtingų komponentų. 2013 metais atlikto tyrimo metu buvo suskaičiuota, jog rinkoje yra apie 1800 unikalių vien Android operacine sistema paremtų įrenginių modelių. \cite{Muccini:2012:STM:2663608.2663615}
+Rinkoje vartotojams prieinami šimtai skirtingų mobiliųjų įrenginių iš skirtingų gamintojų, veikiančių su skirtingomis operacinėmis sistemomis, surinktų iš skirtingų komponentų. 2013 metais atlikto tyrimo metu buvo suskaičiuota, jog rinkoje yra 1800 unikalių vien android operacine sistema paremtų įrenginių. \cite{Muccini:2012:STM:2663608.2663615}
 
-Testuojant šioje srityje reikia stengtis maksimizuoti testų padengtumą minimizuojant naudojamų įrenginių kiekį. Tą galima daryti grupuojant įrenginius, ir testuojant ne konkrečiuose įrenginiuose (mažiau įrenginių) tačiau grupėse. Pavyzdžiui:
+Testuojant šioje srityje reikia stengtis didinti testų padengtumą stengiantis sumažinti naudojamų įrenginių kiekį. Tą galima daryti grupuojant įrenginius ir testuojant ne konkrečiuose įrenginiuose (mažiau įrenginių) tačiau grupėse. Pavyzdžiui:
 
 \begin{itemize}
    \item Pirmoji grupė, žemiausio prioriteto testai, silpni, palyginus su dabartiniais pagrindinių gamintojų flagmanais, turintys silpnesnius procesorius, mažiau atminties, žemesnės raiškos ekranus. Paremti senesne operacinės sistemos versija, veikiantys su senesne naršykle. Dar vis populiarūs, tačiau gamintojo jau nebepalaikomi įrenginiai.
 
    \item Antroji grupė, vidutinio prioriteto testai, vidutinio galingumo įrenginiai, dažniausiai kelių iteracijų, palyginius su dabartiniais pagrindinių išmaniųjų įrenginių gamintojų flagmanais, senumo pvz: iPhone 5s palyginus su iPhone 7. Jau gan seni, 3-2 metai, tačiau dar vis gamintojo palaikomi įrenginiai.
 
-   \item Trečioji grupė, patys naujausi <1 metų senumo įrenginiai. Paremti naujausia operacinės sistemos versija, naujausios kartos komponentais, turintys daugiau atminties, aukštesnės raiškos ekranus, nei praeitos iteracijos modeliai.\cite{6496451}
+   \item Trečioji grupė, patys naujausi nedaugiau, nei vienerių metų senumo įrenginiai. Paremti naujausia operacinės sistemos versija, naujausios kartos komponentais, turintys daugiau atminties, aukštesnės raiškos ekranus, nei praeitos iteracijos modeliai.\cite{6496451}
 \end{itemize}
 
-Testuojant pasirinkta įrenginių kombinacija įgalina keletą pasirinkimų, kaip tokį testavimą galima vykdyti: naudoti rankinį testavimą ar automatinį testavimą, testavimui pasitelkti komandas įmonėje ar žmones pasamdytus iš kitų įmonių, testuoti pagal planą ar naudoti tiriamąjį testavimą (angl. exploratory testing) bei naudoti emuliatorius, virtualias mašinas ar testuoti ant realių, fizinių įrenginių.
+Testuojant pasirinkta įrenginių kombinacija įgalina keletą pasirinkimų, kaip tokį testavimą galima vykdyti: naudoti rankinį testavimą ar automatinį testavimą, testavimui pasitelkti komandas įmonėje ar žmones pasamdytus iš kitų įmonių, testuoti pagal planą ar naudoti tiriamąjį testavimą (angl. exploratory testing) bei ar naudoti emuliatorius, virtualias mašinas ar testuoti ant realių, fizinių įrenginių.
 
 \subsubsection{Naujų operacinių sistemų probleminė sritis}
 Mobiliosios operacinės sistemos, palyginus su operacinėmis sistemomis stacionariesiems kompiuteriams, yra išleidžiamos labai dažnai. Pastaruoju metu tiek iOS tiek Android nauja „numeruotoji“ versija yra išleidžiama kas met. Taip dažnai išleidžiant naują operacinės sistemos iteraciją gali kilti daugybė nesuderinamumo defektų, turint omenyje tai, kad ne visos versijos yra palaikomos, t.y. naujesnės programų versijos gali veikti tik su keliomis paskutinėmis operacinės sistemos iteracijomis.
@@ -129,19 +129,19 @@ Testuojant programas reikėtų atsižvelgti į egzistuojančius konkrečios oper
 \subsubsection{Liečiamųjų ekranų probleminė sritis}
 Liečiamieji ekranai yra pagrindinis, ir dažniausiai vienintelis įvesties pateikimo būdas mobiliuosiuose įrenginiuose. Dažna problema, ypač senesniuose įrenginiuose, yra lėtas prisilietimo prie ekrano atsakas, ar ekrano įvesties atsako laiko padidėjimas imant naudotis sudėtingesnėmis programomis.
 
-Testuojant reikėtų naudoti daug skirtingų įrenginių, kurie iš esmės skiriasi savo specifikacijomis, ypač ekranų dydžiu, raiška. Pagrindinis testavimo objektas yra resursų pasiskirstymas. Tikrinama ar testuojama programinė įranga mobilajame įrenginyje „neryja“ resursų. Reikėtų stengtis įvykdyti didelės apkrovos scenarijų, kai programinė įranga veikia pilnu pajėgumu atlikdama didžiausių skaičiavimų reikalaujančias užduotis, ir tikrinti mobiliojo įrenginio atsako laiką.
+Testuojant reikėtų naudoti daug skirtingų įrenginių, kurie iš esmės skiriasi savo specifikacijomis, ypač ekranų dydžiu, raiška. Pagrindinis testavimo objektas yra resursų pasiskirstymas. Tikrinama ar testuojama programinė įranga mobilajame įrenginyje nenaudoja daugiau skaičiavimo ištekilių, nei manoma, kad ji turėtų naudoti, taip pat tikrinama, ar pasisavinti ištekliai nebenaudojant yra teisingai atlaisvinami. Reikėtų stengtis įvykdyti didelės apkrovos scenarijų, kai programinė įranga veikia pilnu pajėgumu atlikdama didžiausių skaičiavimų reikalaujančias užduotis, ir tikrinti mobiliojo įrenginio atsako laiką.
 
 \subsection{Integracinis testų brandos modelis - TMMi}
-Testų brandos modelis buvo sukurtas, tam, kad įvairios organizacijos galėtų įvertinti bei įvertinę pagerinti savo testavimo procesus. Tai taip pat teikia naudą, kaip modelis, tiesiogine to žodžio prasme, kuris nurodo, kaip testavimo procesas turėtų  palaipsniui gerėti savo efektyvumu bei kokybe. \cite{Burnstein:2010:PST:1965566} Žinoma, jog TMMi nėra vienintelis procesų vertinimo bei gerinimo modelis ar standartas, per paskutiniuosius du dešimtmečius buvo sukurti ne vienas toks standartas. Vienas iš jų yra CMM - Gebėjimo Brandos Modelis (angl. Capability Maturity Model) bei jo įpėdinis Integruotas Gebėjimo Brandos Modelis (angl. Capablitiy Maturity Model Integration - CMMi). Tačiau palyginus su TMM bei TMMi daugelis šių modelių neskiria pakankamai dėmesio testavimo procesų gerinimui. 
+Testų brandos modelis buvo sukurtas, tam, kad įvairios organizacijos galėtų įvertinti bei įvertinę pagerinti savo testavimo procesus. Tai taip pat teikia naudą, kaip modelis, tiesiogine to žodžio prasme, kuris nurodo, kaip testavimo procesas turėtų  palaipsniui gerėti savo efektyvumu bei kokybe. \cite{Burnstein:2010:PST:1965566} Žinoma, jog TMMi nėra vienintelis procesų vertinimo bei gerinimo modelis ar standartas, per paskutiniuosius du dešimtmečius buvo sukurti keletas tokių standartų. Vienas iš jų yra CMM - Gebėjimo Brandos Modelis (angl. Capability Maturity Model) bei jo įpėdinis Integruotas Gebėjimo Brandos Modelis (angl. Capablitiy Maturity Model Integration - CMMi). Tačiau palyginus su TMM bei TMMi daugelis šių modelių neskiria pakankamai dėmesio testavimo procesų gerinimui. 
 
-TMMi modelis sudarytas iš penkių brandos lygių, kurie kiekvienas rodo testavimo proceso brandos būseną. Šie modelio nustatyti lygiai padeda struktūrizuotai siekti aukštesnio proceso našumo, taigi jų reikia siekti iš eilės t.y. negalima iš antro brandos lygio iš karto pasiekti ketvirtojo ar penktojo. Taip pat struktūrizuotas išskirstymas lygiais užtikrina, jog pasiekus aukštesnyjį lygį žemesniajame lygyje pradėtos naudoti praktikos bus naudojamos ir toliau.
+TMMi modelis sudarytas iš penkių brandos lygių, kurie kiekvienas rodo testavimo proceso brandos būseną. Šie modelio nustatyti lygiai padeda struktūrizuotai siekti aukštesnio proceso našumo, taigi jų reikia siekti iš eilės t.y. negalima iš antrojo brandos lygio iš karto pasiekti ketvirtojo ar penktojo. Taip pat struktūrizuotas išskirstymas lygiais užtikrina, jog pasiekus aukštesnyjį lygį, žemesniajame lygyje pradėtos naudoti praktikos bus naudojamos ir toliau.
 
 Kiekvienam testų brandos lygiui pasiekti užsibrėžiamos veiklos, užduotys bei pareigos (angl. Activities, Tasks, Responsibilities - ATR). Šie trys kriterijai nurodo esmines sritis kurios turi būti įtrauktos į testavimo procesą, tam, kad būtų pasiektas norimas brandos lygis. Šie brandos tiksliai turi tapti siekiamybe visiems kūrimo procese dalyvaujantiems žmonėms, ne tik kokybės užtikrinimo srities specialistams. Taip užtikrinimas visapusiškas testavimo proceso palaikymas bei įvertinimas siekiant pagerėjimo.
 
 Testų brandos lygis nustatomas naudojantis TMMi įvertinimo modeliu (angl. TMMi assessment model) sudatyto iš trijų komponentų.
 \begin{itemize}
-   \item Klausimyno, susijusio su brandos tikslų siekimu. Skirt nustatyti dabartinę testavimo proceso būsesną.
-   \item Gairių rinkino skirto įvertinimo komandai.
+   \item Klausimyno, susijusio su brandos tikslų siekimu. Skirtu nustatyti dabartinę testavimo proceso būsesną.
+   \item Gairių rinkino, skirto brandos lygių įvertinimu užsiimančiai komandai.
    \item Įvertinimo procedūra išdėstyta pažingsniui, skirta vesti įvertinimo komandą per testų procesų įvertinimą bei gerinimą.
 \end{itemize}
 
@@ -163,10 +163,10 @@ Kiekvienas iš šių lygių turi ir vidinę struktūrą Priedas nr. 1. Pirmasis 
 Šiame brandos lygyje iš chaotiško proceso imamas apibrėžti konkretus testavimo metodas, bei testavimo procesas imamas valdyti. Imami apibrėžti testavimo scenarijai, kuriami testavimo planai, dažniausiai iš reikalavimų yra keliami testavimo atvejai. TMM bei TMMi paremti krioklio (angl. waterfall) metodologija, todėl testavimas dažniausiai atliekamas kūrimo proceso gale, lyginant turimą produktą, su kūrimo pradžioje apibrėžtais reikalavimais. Pasiekę šį lygį dar, savaime aišku, neturime visiškai efektyvaus testavimo proceso, tačiau turime konkrečiai apibrėžtą testavimo proceso kryptį, kurią bus galima toliau plėtoti siekiant aukštesnio testavimo proceso brandos lygmens.
 
 \subsubsubsection{Trečiasis brandos lygis}
-Šiame brandos lygyje apibrėžiamas standartizuotas procesas bei procedūros, kurios bus naudojamos, visoje organizacijoje, komandoje, kurios testavimo procesą stengiamasi pagerinti. Pasiekus antrąjį brandos lygį testavimo procesas yra struktūrizuotas čia jis imamas integruoti į programinės įrangos kūrimo gyvavimo ciklą (angl. Developement life cycle). Pasiekus trečiąjį testavimo proceso bandos lygį, antrąjame apibrėžtas procesas bus integruotas ir pradėtas naudoti visuose naujuose projektuose nuo pat projekto pradžios. Šiame lygyje dar dažnai planuojamas bei vykdomas nefunkcinis testavimas kiekviename projekte įtrauktame į testavimo procesą.
+Šiame brandos lygyje apibrėžiamas standartizuotas procesas bei procedūros, kurios bus naudojamos, visoje organizacijoje ar komandoje, kurios testavimo procesą stengiamasi pagerinti. Pasiekus antrąjį brandos lygį testavimo procesas yra struktūrizuotas čia jis imamas integruoti į programinės įrangos kūrimo gyvavimo ciklą (angl. Developement life cycle). Pasiekus trečiąjį testavimo proceso bandos lygį, antrąjame apibrėžtas procesas bus integruotas ir pradėtas naudoti visuose naujuose projektuose nuo pat projekto pradžios. Šiame lygyje dar dažnai planuojamas bei vykdomas nefunkcinis testavimas kiekviename projekte įtrauktame į testavimo procesą.
 
 \subsubsubsection{Ketvirtasis brandos lygis}
-Pasiekus šį brandos lygmenį, visų kūrimo veiklų bei rezultatų detalus vertinimas. Procesų vertinimas turėtų būti pradėtas vykdyti nuo pačios anksčiausios kiekvieno projekto stadijos. Taip siekiama kiekvieną projektą įgyvendinti su kuo įmanoma mažiau defektų. Šiame lygyje vykdomos išsamios projekto apžvalgos, bei ankstyvose projektų stadijose vykdomas statinis testavimas derinamas su dinaminėmis testavimo technikomis apibrėžtomis antrąjame testų proceso brandos lygyje. Pasiekus šį brandos lygį testavimo procesas vykdomas visuose programinės įrangos kūrimo gyvavimo ciklo etapuose, taip pat įtraukiant produktų dokumentacijos peržiūrą Priedas nr. 2. Pakankamos kokybės kriterijai apibrėžiami visiems produktams toje organizacijoje.
+Pasiekus šį brandos lygmenį vykdomas visų kūrimo veiklų bei rezultatų detalus vertinimas. Procesų vertinimas turėtų būti pradėtas vykdyti nuo pačios anksčiausios kiekvieno projekto stadijos. Taip siekiama kiekvieną projektą įgyvendinti su kuo įmanoma mažiau defektų. Šiame lygyje vykdomos išsamios projekto apžvalgos, bei ankstyvose projektų stadijose vykdomas statinis testavimas derinamas su dinaminėmis testavimo technikomis apibrėžtomis antrąjame testų proceso brandos lygyje. Pasiekus šį brandos lygį testavimo procesas vykdomas visuose programinės įrangos kūrimo gyvavimo ciklo etapuose, taip pat įtraukiant produktų dokumentacijos peržiūrą Priedas nr. 2. Pakankamos kokybės kriterijai apibrėžiami visiems produktams toje organizacijoje.
 
 \subsubsubsection{Penktasis brandos lygis}
 Šiame brandos lygyje visos testavimo veiklos bei rezultatai yra vertinami siekiant juos optimizuoti. Tai daroma norint nuolatos tobulinti testavimo procesą siekiant visiškos defektų prevencijos, o ne defektų taisymo.
@@ -187,13 +187,14 @@ Pagrindiniai CMM bei TMM skirtumai:
 Šiandien testavimas programinės įrangos kūrimo procesuose atlieka labai svarbų vaidmenį, todėl jam teikiamas toks pat, jeigu ne didesnis dėmesys, kaip programinės įrangos kūrimui. Turint tai omenyje, CMM bei jo įpėdinis CMMi tampa nepriimtini dėl dėmesio testavimo procesų gerinimui stokos.
 
 \subsection{Probleminių sričių pasiskirstymas TMMi modelyje.}
-TMMi savo lygmenimis išskirsto ir funkcinį bei nefunkcinį testavimą, pvz. Antrąjame lygyje užtenka sutvarkyti funkcinio testavimo procesus, o trečiojo lygio nebus galima pasiekti neįgyvendinus nefunkcinio testavimo proceso tvarkos. Auščiau išskirtas mobiliųjų programų testavimo problemines sritis taip pat paprastai galima išskirstyti į funkcinio testavimo bei nefunkcinio testavimo rūšis:
+TMMi savo lygmenimis išskirsto ir funkcinį bei nefunkcinį testavimą, pvz. Antrąjame lygyje užtenka sutvarkyti funkcinio testavimo procesus, o trečiojo lygio nebus galima pasiekti neįgyvendinus nefunkcinio testavimo proceso tvarkos. Mobiliųjų programų kūrimo analizėje išskirtas mobiliųjų programų testavimo problemines sritis taip pat paprastai galima išskirstyti į funkcinio testavimo bei nefunkcinio testavimo rūšis:
 \begin{itemize}
-   \item Funkciniai testai: Draugiškumo vartotojui probleminė sritis, Situacinio prisitaikymo probleminė sritis bei Įrenginių gausos probleminė sritis.
-   \item Nefunkciniai testai: Ribotų išteklių probleminė sritis, Ryšio sujungiamumo probleminė sritis.
+   \item Funkciniai testai: Draugiškumo vartotojui probleminė sritis, Situacinio prisitaikymo probleminė sritis, Liečiamųjų ekranų bei Įrenginių gausos probleminės sritys.
+   \item Nefunkciniai testai: Ribotų išteklių probleminė sritis, Ryšio sujungiamumo probleminė sritis bei Operacinių sistemų probleminės sritys.
 \end{itemize}
-Kadangi probleminių sričių testavimas lengvai išskirstomas į funkcinį bei nefunkcinį, jam galima nesunkiai pritaikyti testų brandos modelį. Taip ne tik pasiekiant pilną probleminių sričių padengtumą testais, tačiau ir bendro testavimo proceso pagerinimą.
+Kadangi probleminių sričių testavimas lengvai išskirstomas į funkcinį bei nefunkcinį, problemines sritis nesunkiai galima išdėstyti brandos modelyje. Taip ne tik pasiekiant pilną probleminių sričių padengtumą testais, tačiau ir bendro testavimo proceso pagerinimą. Funkciniai testai, ir sritys kuriose pagrindinis dėmesys yra jiems teikiamas turėtų būti apgalvojami antrąjame brandos lygyje, o nefunkciniai testai ir sritys, kuriose pagrindinis demesys į nefunkcinius testus, patektų į trečiąjį brandos lygį.
 
+Taip atrodytų Integraciniu Testų Brandos modelių paremtas probleminių sričių testavimo modelis:
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.85]{img/Tmmimobile}
@@ -204,16 +205,16 @@ Kadangi probleminių sričių testavimas lengvai išskirstomas į funkcinį bei 
 \section{Agile metodologijos mobiliųjų programų kūrime.}
 Agilieji kūrimo metodai (angl. agile) tai lanksčios programinės įrangos kūrimo metodikos. Tokiose metodikose viskas kūrimo procesas yra suskaldomas į eilę ciklų, dar vadinamų iteracijomis. Dažnai, kuriant mobiliasias programas remiantis agiliaisiais metodais, visos užduotys padalijamos į keletą mažesnių, skirtų įvykdyti didesniąjai, kurių kiekviena tampa kone savo atskiru mikroprojektu iš kurio pro iteracijos komanda gauna veikiančio produkto dalį.
 
-Iteracinis išskirstymas leidžia projektą tvarkingai išskirstyti logiškai, viena po kitos einančiomis dalimis, taip pat išskirstant komandos resursus atitinkamai dirbti mažesnėse komandose, taip sumažinant kūrimo rizikas, tokias, kaip defektai.
+Iteracinis išskirstymas leidžia projektą tvarkingai išskirstyti nuosekliai, viena po kitos einančiomis dalimis, taip pat išskirstant komandos resursus atitinkamai dirbti mažesnėse komandose, taip sumažinant kūrimo rizikas, tokias, kaip defektai.
 
 \subsection{TMMi ir Agile}
-Testų brandos modelis bei agiliosios kūrimo metodologijos, dvi praktikos, kurios skiekia to paties, tačiau iš pirmo žvilgsnio nėra suderinamos. TMMi, kaip ir daugelis kitų brandos modelių, yra paremtas V modeliu Priedas nr. 2, tai tokia programinės įrangos kūrimo metodologija, kai  visi planavimo, kūrimo bei testavimo procesai yra vykdomi atskirai vienas nuo kito, paeiliui, o kūrimo metu tik planuojant testavimą. Kol tuo tarpu agiliųjų metodologijų manifeste teigiama, jog žmonės ir bendravimas vertinamas labiau, nei procesai ar įrankiai, veikianti programinė įranga vertinama labiau, nei išsami dokumentacija, bendradarbiavimas su klientu vertinamas labiau, nei derybos dėl kontraktų ir reagavimas į pokyčius vertinamas labiau, nei plano įvykdyamas \cite{agile}. Iš pirmo žvilgsio abi metodologijos atrodo visiškomis priešingybėmis. Ar galime daryti išvadą, jog agiliųjų metodologijų testavimo procesas pasmerktas ir nepagerinamas?
+Testų brandos modelis bei agiliosios kūrimo metodologijos, dvi praktikos, kurios siekia to paties, tačiau iš pirmo žvilgsnio nėra suderinamos. TMMi, kaip ir daugelis kitų brandos modelių, yra paremtas V-modeliu Priedas nr. 2, tai tokia programinės įrangos kūrimo metodologija, kai visi planavimo, kūrimo bei testavimo procesai yra vykdomi atskirai vienas nuo kito, paeiliui, o kūrimo metu tik planuojant testavimą. Kol tuo tarpu agiliųjų metodologijų manifeste teigiama, jog žmonės ir bendravimas vertinamas labiau, nei procesai ar įrankiai, veikianti programinė įranga vertinama labiau, nei išsami dokumentacija, bendradarbiavimas su klientu vertinamas labiau, nei derybos dėl kontraktų ir reagavimas į pokyčius vertinamas labiau, nei plano įvykdyamas \cite{agile}. Iš pirmo žvilgsio abi metodologijos atrodo visiškomis priešingybėmis. Ar galime daryti išvadą, jog agiliųjų metodologijų testavimo procesas pasmerktas ir nepagerinamas?
 
-Kuriant programinę įrangą agiliosiomis metodologijomis, nėra rašoma palti dokumentacija, tačiau kiekvienos iteracijos pradžioje imama dalis reikalavimų, užduočių, ir detaliai išnagrinėjiama įvertinama valandų kiekiu, ar pagal sudėtingumą, o kiekvienos iteracijos pabaigoje vyksta apžvalga, aptarimas skirtas pagerinti procesus kitai iteracijai bei apptarti, kas buvo nuveikta šią iteraciją.
+Kuriant programinę įrangą agiliosiomis metodologijomis, nėra rašoma palti dokumentacija, jei ji rašoma iš vis, tačiau kiekvienos iteracijos pradžioje imama dalis reikalavimų, užduočių, ir detaliai išnagrinėjiama bei  įvertinama valandų kiekiu ar sudėtingumą, o kiekvienos iteracijos pabaigoje vyksta apžvalga, aptarimas skirtas pagerinti procesus kitai iteracijai bei aptarti tai, kas buvo nuveikta šią iteraciją.
 
-Naudojantis agiliosiomis metodologijomis nėra kuriamas detalus testavimo planas visam projektui, komanda pati neapibrėžia kokybės reikalavimų kiekvienai užduočiai. Testai kuriami universalūs, pritaikomi kiekvienai iteracijai, papildomi naujo funkcionalumo testais atitinkamai nuo to, kas yra atlikta, ar planuojama atlikti. Kokybiniai reikalavimai kinta, tačiau yra lengvai nustatomi glaudžiai bendradarbiaujant su projekto užsakovu, ką agiliosios metodologijos ir skatina.
+Naudojantis agiliosiomis metodologijomis nėra kuriamas detalus testavimo planas visam projektui, komanda pati neapibrėžia kokybės reikalavimų kiekvienai užduočiai. Testai kuriami universalūs, pritaikomi kiekvienai iteracijai, papildomi testais naujam funkcionalumui atitinkamai nuo to, kas yra atlikta, ar planuojama atlikti. Kokybiniai reikalavimai kinta, tačiau yra lengvai nustatomi glaudžiai bendradarbiaujant su projekto užsakovu, ką agiliosios metodologijos ir skatina.
 
-Žvelgiant į kiekvieną agiliąją iteraciją, kaip atskirą projektą, jai galima pritaikyti V-modelį, o tuo labiau TMMi testų brandos modelį. Remiantis išskirtais TMMi lygiais, aglijiuoju manifestu bei tokio kūrimo procesu agilųjį testavimo procesą TMMi modelyje butų galima išdėstyti taip:
+Žvelgiant į kiekvieną agiliąją iteraciją, kaip atskirą projektą kiekvienai iš jų galima pritaikyti V-modelį taip kiekvieną agiliojo proceso iteraciją padarant suderinamą su TMMi testų brandos modeliu. Remiantis išskirtais TMMi lygiais, aglijiuoju manifestu bei tokio kūrimo procesu agilųjį testavimo procesą TMMi modelyje butų galima išdėstyti taip:
 
 \begin{figure}[H]
     \centering
@@ -223,7 +224,7 @@ Naudojantis agiliosiomis metodologijomis nėra kuriamas detalus testavimo planas
 \end{figure}
 
 \sectionnonum{Rezultatai ir išvados}
-Šiame darbe buvo išnagrinėtas programinės įrangos kūrimas remiantis mobiliojo įrenginio apibrėžimu, taip išskiriant esminius skirtumus tarp programinės įrangos kūrimo mobiliesiems įrenginiams bei programų kūrimo stacionariems kompiuteriams, interneto programų kūrimo.
+Šiame darbe buvo išnagrinėtas mobiliosios programinės įrangos kūrimas remiantis mobiliojo įrenginio apibrėžimu, taip išskiriant esminius skirtumus tarp programinės įrangos kūrimo mobiliesiems įrenginiams bei programų kūrimo stacionariems kompiuteriams, interneto programų kūrimo.
 
 Atliekant tyrimą pastebėta, jog informaciją apie mobiliųjų programų kūrimą visada pateikiama per agiliųjų metodologijų prizmę, tačiau testų procesų gerinimo metodai, testų brandos modeliai, yra paremti V-modelio programinės įrangos kūrimo metodologijomis. Buvo pasirinkta strategija išskirti problemines mobiliųjų programų testavimo sritis, tuomet jas pritaikyti TMMi modeliui priskiriant atitikamam brandos lygmeniui. Ta pati strategija buvo taikoma atskirai nagrinėjant agiliasias metodologijas, siekiant rasti sprendimą, kai V-modeliu paremtas testų brandos modelis galėtų būti pritaikomas su agiliosiomis praktikomis.
 
@@ -248,17 +249,25 @@ Remiantis šiais išskirtinumo bruožais, bei keletu tyrimų apie mobiliųjų pr
 \end{itemize}
 Kiekvienai šių sričių išskirti pagrindiniai testavimo objektai bei iššūkiai galintys kilti testavimo metu.
 
-Toliau, darbe nagrinėjama konkretus testavimpo proceso gerinimo sprendimas - TMMi, testų brandos integracinis modelis. Buvo plačiau išnagrinėtas kiekvienas iš modelyje apibrėžtų lygių, taip siekiant atrasti sąsają, tarp mobiliųjų programų kūrimo probleminių sričių, bei testavimo proceso struktūrizavimo metodų. Taip pat išnagrinėjamas CMM - gebėjimo brandos modelis, kuris buvo sukurtas dar prieš TMM, tačiau išsiaiškinta, jog CMM didelio dėmesio testavimui neskiria, todėl jis toliau darbe nenagrinėtas. Pateiktas TMMi paremtas modelis skirtas mobiliųjų programų probleminių sričių testavimui.
+Toliau, darbe nagrinėjama konkretus testavimpo proceso gerinimo sprendimas - TMMi, testų brandos integracinis modelis. Buvo plačiau išnagrinėtas kiekvienas iš modelyje apibrėžtų lygių, taip siekiant atrasti sąsają, tarp mobiliųjų programų kūrimo probleminių sričių, bei testavimo proceso struktūrizavimo metodų. Taip pat išnagrinėjamas CMM - gebėjimo brandos modelis, kuris buvo sukurtas dar prieš TMM, tačiau išsiaiškinta, jog CMM didelio dėmesio testavimui neskiria, todėl jis toliau darbe nenagrinėtas. Lengvesniai adaptacijai problemines sritis buvo nuspręsta išskirstyti į aprėpiančias funkcinius bei nefunkcinius reikalavimus. Ryšio sujungiamumo, ribotų išteklių, operacinių sistemų bei liečiamųjų ekranų probleminės sritys buvo apibrėžtos, kaip apimančios nefunkcinius testus. Draugiškumo vartotojui, situacinio prisitaikumo bei įrenginių gausos probleminės sritys buvo priskirtos, kaip apimančios funkcinius testus. Taip funkcinį testavimą galima lengvai integruoti į antrąjį brandos lygį, o nefunkcinį - į trečiąji. Pateiktas TMMi paremtas modelis skirtas mobiliųjų programų probleminių sričių testavimui.
 
 Kuriant TMMi paremtą modelį probleminėms sritims iškilo dar viena problema - metodologijų nesuderinamumas. Daugelis mobiliųjų programų yra kuriamos agiliosiomis metodologijomis paremtu kūrimo procesu, kuriame daug dėmesio nekreipiama į dokumentavima. TMMi glaudžiai paremtas V-modeliu, kuriame programų kūrimas vyksta ne iteracijomis tačiau etapais, nuo planavimo iki sistemos testavimo, kiekviename etape iki testavimo pradžios daug dokumentuojant, taip sudarant pagrindą daugeliui testų. Buvo priimtas sprendimas vieną agiliąją programos kūrimo iteraciją laikyti atskiru projektu, paremtu V-modeliu. Ir kiekvienai agiliajai iteracijai būdingus bruožus pritaikyti jų V-modelio atitikmenims. Taip gaunant iteracinį testų brandos modelį, kuris testavimo procesą gerina kiekvienai iteracijai atskirai, bei visam projektui po kiekvienos iteracijos.
 
-Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis konkrečioms probleminėms sritims, kitas, agiliojo proceso adaptacija į testų brandos modelį. Kadangi abu modeliai yra paremti TMMi juos galima vykdyti kartu, kiekvienoje agiliojoje iteracijoje tiesiog įtraukiant naująjį funkcionalumą suplanuotą tai iteracijai.
+Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis konkrečioms probleminėms sritims, kitas, agiliojo proceso adaptacija į testų brandos modelį. Abu modeliai yra paremti integruotuoju testų brandos modeliu todėl tarpusavyje suderinami. Juos galima įgyvendinti tarpusavyje, paraleliai siekiant geresnio agiliojo proceso bei pilno probleminio sričių padengtumo testais.
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.75, angle=90]{img/agilemobile}
     \caption{Agile TMMi modelio, bei mobiliojo testavimo problemonių sričių TMMi modelio apjungimas.}
     \label{img:agilemobile}
+\end{figure}
+
+Galutinis Mobiliųjų programų testavimo modelis, aprėpiantis pagrindines problemines mobiliosios programinės įrangos sritis bei aprėpiantis mobiliųjų programų kūrimą agiliosiomis metodikomis.
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.75]{img/FinalTMMi}
+    \caption{Galutinis TMMi paremtas modelis aprėpiantis pagrindines mobiliųjų programų kūrimo problemas.}
+    \label{img:finaltmmi}
 \end{figure}
 
 \printbibliography[heading=bibintoc]  % Šaltinių sąraše nurodoma panaudota
@@ -270,8 +279,29 @@ Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis
 
 % \sectionnonum{Sąvokų apibrėžimai}
 \sectionnonum{Žodynas}
+Agile - 
+
+Atsako laikas - 
+
+Dinaminis testavimas - 
+
+EDGE - 
+
+GPRS - 
+
+NFC (Near Field Communication) - 
+
+PDA (Personal Digital Assistant) - 
+
+Programinės įrangos kūrimo gyvavimo ciklas - 
+
 Statinis testavimas - 
 
+Tiriamasis testavimas - 
+
+V-modelis - 
+
+Waterfall - 
 
 \appendix  % Priedai
 % Prieduose gali būti pateikiama pagalbinė, ypač darbo autoriaus savarankiškai
