--- a/kursinis.tex
+++ b/kursinis.tex
@@ -12,6 +12,10 @@
 \usepackage{listings}
 \usepackage{subfig}
 \usepackage{wrapfig}
+\usepackage{enumitem}
+% Global settings for enumerator.
+\setitemize{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
+\setenumerate{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt}
 
 
 % Titulinio aprašas
@@ -42,25 +46,25 @@
 \sectionnonum{Įvadas}
 Nuo 2007, kai buvo pristatytas pirmasis iPhone jau praėjo kiek daugiau nei dešimt metų. Šio mobiliojo įrenginio, išmaniojo telefono (angl. Smartphone), pristatymas  iš esmės pakeitė mobiliųjų kompiuterių rinką. Iki tol asmeniniai skaitmeniai asistentai (angl. PDA personal digital asistant) buvo nei prieinami, nei labai naudingi įprastam vartotojui, todėl juos turėjo keletas verslo pasaulio žmonių, o paprastas vartotojas su savimi nešiojosi krūvą skirtingą funkcionalumą atliekančių prietaisų: MP3 grotuvų, Fotoaparatų, nešiojamųjų kompiuterių, telefonų. iPhone žadėjo delne telpantį kompiuterį kiekvienam už prieinamą kainą, ir savo pažadą įvykdė. Vienas po kito ėmė rastis  mobiliosios operacinės sistemos, turėjusios tiesiogiai konkuruoti su iPhone naudojama iOS,  kaip PalmOS, Symbian, Windows 7 mobile, vėliau tapusi 8 ir 8.1 bei Android. Mobiliųjų kompiuterių bei telefonų rinką užplūdo gausa prieinamų įrenginių, kurie su kiekviena nauja laida savo skaičiavimo sugebėjimais artėja arčiau ir arčiau to ką gali atlikti staliniai kompiuteriai ir, iš pažiūros, 2017 metų išmanusis įrenginys savo specifikacijomis „ant popieriaus“ jau seniai pranoko 2007 metų kompiuterį.
 
-Nors šiandien iš gausaus operacinių sistemų pasirinkimo rinkoje iš esmės išlikę tik dvi: iOS ir Android, tačiau  išmaniųjų prietaisų populiarumas toli gražu neblėsta. 2016 metais pasaulyje jau buvo apie 2.1 mlrd. išmaniųjų telefonų naudotojų, o iki 2020 planuojama, jog šis skaičius sieks 2.87 mlrd.\cite {statista.com}. Esant didžulei įrenginių paklausai proporcingai kyla poreikis ir programinei įrangai pritaikytai šiems įrenginiams - mobiliosioms programoms.
+Nors šiandien iš gausaus operacinių sistemų pasirinkimo rinkoje iš esmės išlikę tik dvi: iOS ir Android, tačiau  išmaniųjų prietaisų populiarumas toli gražu neblėsta. 2016 metais pasaulyje jau buvo apie 2.1 mlrd. išmaniųjų telefonų naudotojų, o iki 2020 planuojama, jog šis skaičius sieks 2.87 mlrd. \cite{statista.com}. Esant didžulei įrenginių paklausai proporcingai kyla poreikis ir programinei įrangai pritaikytai šiems įrenginiams - mobiliosioms programoms.
 
 Šio darbu siekiama pateikti esminius skirtumus tarp įprastų darbastalio (angl. desktop) bei internetinių (angl. Web) programų ir mobiliųjų programų skirtų išmaniesiems įrenginiams kokybės užtikrinimo. Šio darbo tikslas - išanalizavus dabartinės rinkos mobiliųjų programų kūrimo procesų tendencijas, išskirti problemines mobiliųjų programų kokybės užtikrinimo sritis bei pateikti keletą probleminių sričių kokybės užtikrinimo sprendimų remiantis testų brandos modeliu.
 
 Siekiant sėkmingai įgyvendinti užsibrėžtą dabo tikslą darbo metu bus:
-\begin{itemize}
+\begin{enumerate}
    \item Atliekama mobiliųjų įrenginių sampratos analizė, siekiant išsiaiškinti esminius skirtumus, kurie gali daryti įtaką mobiliųjų programų veikimui;
    \item Remiantis mobiliųjų įrenginių sampratos analize išrenkamos pagrindinės probleminės sritys mobiliųjų programų testavime;
    \item Atliekama integruotojo testų brandos modelio - TMMi detali analizė;
    \item Remiantis mobiliųjų programų testavimo probleminėmis sritimis bei TMMi analizės rezultatais pateikiamas TMMi paremtas modelis skirtas padengti visas problemines sritis;
-   \item Atliekama agiliųjų metodikų naudojimo mobiliųjų programų kūrime apžvalga;
    \item Remiantis agiliųjų metodikų iteratyvumu pateikiamas TMMi modelis pritaikytas komandoms dirbančioms pagal agiliasias metodikas.
-\end{itemize}
+   \item Remiantis probleminių sričių bei agiliųjų metodikų modeliais pateikiamas mobiliųjų programų testavimo sprendimas.
+\end{enumerate}
 
 
 
 \section{Mobiliųjų programų kokybės užtikrinimas.}
 
-2013 metais atliktas tyrimas \cite {compuware.com} rodo, jog 79\% išmaniųjų telefonų naudotojų išbando atsisiųstą programėlę tik kartą prieš ištrindami. Didelė to priežastis yra žemesnė mobiliųjų programų kokybė palyginus su tuo ką vartotojai yra įpratę matyti savo naršyklėse, ar darbastalio programose. Išmaniųjų telefonų naudotojai yra pratę prie nemokamos ar žymiai mažiau kainuojančios programinės įrangos, kuri gauna nuolatinius atnaujinimus. (Pvz.: Adobe photoshop express iOS 0eur., Adobe Photoshop Windows 10 290eur./m. \cite{adobe.com}). Kyla kainų dilema: norint palaikyti žemas kainas rinkoje reikia mažinti kainas ir kūrimo procese. Tai dažnai daroma taupant laiką, kur ir nukenčia kokybės užtikrinimo procesai.
+2013 metais atliktas tyrimas rodo, jog 79\% išmaniųjų telefonų naudotojų išbando atsisiųstą programėlę tik kartą prieš ištrindami \cite{compuware.com}. Didelė to priežastis yra žemesnė mobiliųjų programų kokybė palyginus su tuo ką vartotojai yra įpratę matyti savo naršyklėse, ar darbastalio programose. Išmaniųjų telefonų naudotojai yra pratę prie nemokamos ar žymiai mažiau kainuojančios programinės įrangos, kuri gauna nuolatinius atnaujinimus. (Pvz.: Adobe photoshop express iOS 0eur., Adobe Photoshop Windows 10 290eur./m. \cite{adobe.com}). Kyla kainų dilema: norint palaikyti žemas kainas rinkoje reikia mažinti kainas ir kūrimo procese. Tai dažnai daroma taupant laiką, kur ir nukenčia kokybės užtikrinimo procesai.
 
 Į mobiliųjų programų kūrimą vis dar žiūrima taip pat, kaip į interneto programų (angl. WEB application) ar darbastalio programų kūrimą, neįžvelgiant esminių skirtumų tarp šių dviejų programinės įrangos kūrimo procesų. Didžiulė įrenginių variacijų gausa, ir iš esmės išsiskiriantys naudojimosi mobiliąja programine įranga įpročiai turėtų versti kūrėjus į mobiliųjų programų kūrimą žvelgti kitaip.
 
@@ -72,8 +76,8 @@ M. Satyanarayanan dar 1996-aisiais savo straipsnyje apie mobiliuosius kompiuteri
    \item Galia (angl. performance) ir patikimumas
    \item Riboti energijos ištekliai.
 \end{itemize}
-
-Iš esmės mobiliosios programos yra tokia programinė įranga, kuri veikia nešiojamame (mobiliame) įrenginyje. Tačiau į mobiliąją kompiuteriją žvelgiant per išmaniųjų telefonų prizmę mobiliųjų programų apibrėžimą galima sukonkretinti. Mobilioji programa (angl. mobile app) - programa suprojektuota veikti išmaniąjame telefone, planšetiniame kompiuteryje ar kitame mobiliame įrenginyje ir/arba, kaip įvestį, priimanti situacija paremtą (angl. context based) informaciją pvz. GPS signalas. \cite{6496451} Situacijos supratimas, naudojimasis situacine informacija ir gebėjimas keisti programos elgseną pagal gautus duomenis yra dar vienas esminis mobiliųjų programų, ypač skirtų išmaniesiems telefonams, skiriamasis bruožas.
+\bigskip
+Iš esmės mobiliosios programos yra tokia programinė įranga, kuri veikia nešiojamame (mobiliame) įrenginyje. Tačiau į mobiliąją kompiuteriją žvelgiant per išmaniųjų telefonų prizmę mobiliųjų programų apibrėžimą galima sukonkretinti. Mobilioji programa (angl. mobile app) - programa suprojektuota veikti išmaniąjame telefone, planšetiniame kompiuteryje ar kitame mobiliame įrenginyje ir/arba, kaip įvestį, priimanti situacija paremtą (angl. context based) informaciją pvz. GPS signalas \cite{6496451}. Situacijos supratimas, naudojimasis situacine informacija ir gebėjimas keisti programos elgseną pagal gautus duomenis yra dar vienas esminis mobiliųjų programų, ypač skirtų išmaniesiems telefonams, skiriamasis bruožas.
 
 Remiantis šiais keturiais techniniais išskirtinumo bruožais, ir esminiu veikimo skirtumu galima pradėti išskirti problemines kokybės užtikrinimo sritis mobiliųjų programų kūrime. Laikant progamas išmaniesiems telefonams tyrimo baziniu objektu išskiriamos šios sritys:
 \begin{itemize}
@@ -89,10 +93,10 @@ Remiantis šiais keturiais techniniais išskirtinumo bruožais, ir esminiu veiki
 \subsubsection{Ryšio sujungiamumo probleminė sritis}
 Sugebėjimas prisijungti prie mobiliojo ryšio stočių bei bevielio interneto taškų dažnai mobiliajai programai yra kritinis reikalavimas be kurio ši nesugebės funkcionuoti. Problema kyla dėl ryšio nepastovumo keliaujant. Keliaujant didelius atstumus vyksta persijungimai tarp mobilaus ryšio stotelių, vartotojas gali pakliūti į neryšio zoną, ar vietą kurioje veikia viso labo GPRS ar EDGE ryšys. Taip pat ir su bevielio interneto stotelėmis, kurių dažna veikia vos 100m. spinduliu nesant jokiems trukdžiams. 
 
-Testuojant šioje srityje derėtų atsižvelgti į jau egzistuojančius ryšio defektus esančius specifiniame testavimui naudojamame įrenginyje, ar operacinėje sistemoje. \cite{android_bugs} Testuojant programas kurios priklausonuo įrenginio sugebėjimo prisijungti prie interneto ar mobiliojo ryšio tinklų atsiranda poreikis atlikti funkcinius testus įvairuose ryšio sujungiamumo scenarijuose. Pagrindinis siekis yra užtikrinti teisingą programos veikimą, net dingus ryšiui ar šiam staiga smarkiai sulėtėjus.
+Testuojant šioje srityje derėtų atsižvelgti į jau egzistuojančius ryšio defektus esančius specifiniame testavimui naudojamame įrenginyje, ar operacinėje sistemoje \cite{android_bugs}. Testuojant programas kurios priklausonuo įrenginio sugebėjimo prisijungti prie interneto ar mobiliojo ryšio tinklų atsiranda poreikis atlikti funkcinius testus įvairuose ryšio sujungiamumo scenarijuose. Pagrindinis siekis yra užtikrinti teisingą programos veikimą, net dingus ryšiui ar šiam staiga smarkiai sulėtėjus.
 
 \subsubsection{Ribotų išteklių probleminė sritis}
-Kol mobilieji įrenginiai tampa vis galinesni ir galingesni, jie vis dar negali pasivyti satcionariųjų bei nešiojamųjų kompiuterių. Pavyzdžiui vienas iš galingesnių šiuo metu rinkoje esančių telefonų, Samsung Galaxy s8+ turi 6GB atminties bei 8 branduolių, palaikančių 8 gijas, sistemą mikroschemoje (angl. system on a chip) į kurią integruoti vaizdo procesorius bei pagrindinis procesoriai. \cite{samsung_s8} Šiuo metu didžioji dauguma vartotojams prieinamų motininių plokščių kompiuteriams palaiko iki 64GB atminties, o intel neseniai atskleidė savo naujosios kartos i9 procesorių liniją, kur aukščiausios klasės procesorius sudarytas iš 18 branduolių bei palaiko 36 gijas. \cite{intel_i9}
+Kol mobilieji įrenginiai tampa vis galinesni ir galingesni, jie vis dar negali pasivyti satcionariųjų bei nešiojamųjų kompiuterių. Pavyzdžiui vienas iš galingesnių šiuo metu rinkoje esančių telefonų, Samsung Galaxy s8+ turi 6GB atminties bei 8 branduolių, palaikančių 8 gijas, sistemą mikroschemoje (angl. system on a chip) į kurią integruoti vaizdo procesorius bei pagrindinis procesoriai \cite{samsung_s8}. Šiuo metu didžioji dauguma vartotojams prieinamų motininių plokščių kompiuteriams palaiko iki 64GB atminties, o intel neseniai atskleidė savo naujosios kartos i9 procesorių liniją, kur aukščiausios klasės procesorius sudarytas iš 18 branduolių bei palaiko 36 gijas \cite{intel_i9}.
 
 Testuojant šioje srityje būtina atsižvelgti į išteklių įrenginyje panaudojimą paleidžiant bei naudojantis programa. Tai daroma siekiant išvengti staigių našumo sumažėjimų, neteisingo, nenumatyto programos ar įrenginio veikimo staiga imant naudoti 100\% prieinamų išteklių. Pagrindinis testavimo siekis užtikrinti teisingą programos bei įrenginio veikimą esant skaičiavimo išteklių trūkumui.
 
@@ -104,10 +108,10 @@ Testuojant šioje srityje būtina testavimą atlikti su daug skirtingų įrengin
 \subsubsection{Situacinio prisitaikymo probleminė sritis}
 Didelė dalis mobiliųjų programų remiasi duomenimis gautais priklausomai nuo situacijos, iš įvairių sensorių išmaniajame įrenginyje. Dažnai išmanieji įrenginiai keletą skirtingų sensorių, tokių kaip mikrofonai, šviesos jutikliai, akselerometrai bei giroskopai, vaizdo kameros. Tokie įrenginiai turi ir keletą būdų komunikuoti, susijungti su kitais prietaisais ar prisijungti prie interneto: bluetooth, wifi, 4G/LTE, NFC. Visi šie sensoriai gali suteikti programai daugybę informacijos realiu laiku, atsižvelgiant į tai kokius vartotojas veiksmus atlieka, ar kur jis tuo metu yra.
 
-Testuojant šioje srityje patikrinti visų įrenginių ir įvesčių kombinacijų praktiškai neįmanoma. Todėl testus reikia skirstyti į kontekstinius (angl. context-specific) bei nusistatyti užtektinus testų padengtumo kriterijus. Kuriant kontekstu paremtus testus, bei renkantis įrenginius su kuriais bus vykdomi testavimo atvejai verta atsižvelgti į konkrečiam įrenginiui ar operacinės sistemos versijai būdingus defektus. \cite{android_bugs}
+Testuojant šioje srityje patikrinti visų įrenginių ir įvesčių kombinacijų praktiškai neįmanoma. Todėl testus reikia skirstyti į kontekstinius (angl. context-specific) bei nusistatyti užtektinus testų padengtumo kriterijus. Kuriant kontekstu paremtus testus, bei renkantis įrenginius su kuriais bus vykdomi testavimo atvejai verta atsižvelgti į konkrečiam įrenginiui ar operacinės sistemos versijai būdingus defektus \cite{android_bugs}.
 
 \subsubsection{Įrenginių gausos probleminė sritis}
-Rinkoje vartotojams prieinami šimtai skirtingų mobiliųjų įrenginių iš skirtingų gamintojų, veikiančių su skirtingomis operacinėmis sistemomis, surinktų iš skirtingų komponentų. 2013 metais atlikto tyrimo metu buvo suskaičiuota, jog rinkoje yra 1800 unikalių vien android operacine sistema paremtų įrenginių. \cite{Muccini:2012:STM:2663608.2663615}
+Rinkoje vartotojams prieinami šimtai skirtingų mobiliųjų įrenginių iš skirtingų gamintojų, veikiančių su skirtingomis operacinėmis sistemomis, surinktų iš skirtingų komponentų. 2013 metais atlikto tyrimo metu buvo suskaičiuota, jog rinkoje yra 1800 unikalių vien android operacine sistema paremtų įrenginių \cite{Muccini:2012:STM:2663608.2663615}.
 
 Testuojant šioje srityje reikia stengtis didinti testų padengtumą stengiantis sumažinti naudojamų įrenginių kiekį. Tą galima daryti grupuojant įrenginius ir testuojant ne konkrečiuose įrenginiuose (mažiau įrenginių) tačiau grupėse. Pavyzdžiui:
 
@@ -116,9 +120,9 @@ Testuojant šioje srityje reikia stengtis didinti testų padengtumą stengiantis
 
    \item Antroji grupė, vidutinio prioriteto testai, vidutinio galingumo įrenginiai, dažniausiai kelių iteracijų, palyginius su dabartiniais pagrindinių išmaniųjų įrenginių gamintojų flagmanais, senumo pvz: iPhone 5s palyginus su iPhone 7. Jau gan seni, 3-2 metai, tačiau dar vis gamintojo palaikomi įrenginiai.
 
-   \item Trečioji grupė, patys naujausi nedaugiau, nei vienerių metų senumo įrenginiai. Paremti naujausia operacinės sistemos versija, naujausios kartos komponentais, turintys daugiau atminties, aukštesnės raiškos ekranus, nei praeitos iteracijos modeliai.\cite{6496451}
+   \item Trečioji grupė, patys naujausi nedaugiau, nei vienerių metų senumo įrenginiai. Paremti naujausia operacinės sistemos versija, naujausios kartos komponentais, turintys daugiau atminties, aukštesnės raiškos ekranus, nei praeitos iteracijos modeliai \cite{6496451}.
 \end{itemize}
-
+\bigskip
 Testuojant pasirinkta įrenginių kombinacija įgalina keletą pasirinkimų, kaip tokį testavimą galima vykdyti: naudoti rankinį testavimą ar automatinį testavimą, testavimui pasitelkti komandas įmonėje ar žmones pasamdytus iš kitų įmonių, testuoti pagal planą ar naudoti tiriamąjį testavimą (angl. exploratory testing) bei ar naudoti emuliatorius, virtualias mašinas ar testuoti ant realių, fizinių įrenginių.
 
 \subsubsection{Naujų operacinių sistemų probleminė sritis}
@@ -132,7 +136,7 @@ Liečiamieji ekranai yra pagrindinis, ir dažniausiai vienintelis įvesties pate
 Testuojant reikėtų naudoti daug skirtingų įrenginių, kurie iš esmės skiriasi savo specifikacijomis, ypač ekranų dydžiu, raiška. Pagrindinis testavimo objektas yra resursų pasiskirstymas. Tikrinama ar testuojama programinė įranga mobilajame įrenginyje nenaudoja daugiau skaičiavimo ištekilių, nei manoma, kad ji turėtų naudoti, taip pat tikrinama, ar pasisavinti ištekliai nebenaudojant yra teisingai atlaisvinami. Reikėtų stengtis įvykdyti didelės apkrovos scenarijų, kai programinė įranga veikia pilnu pajėgumu atlikdama didžiausių skaičiavimų reikalaujančias užduotis, ir tikrinti mobiliojo įrenginio atsako laiką.
 
 \subsection{Integracinis testų brandos modelis - TMMi}
-Testų brandos modelis buvo sukurtas, tam, kad įvairios organizacijos galėtų įvertinti bei įvertinę pagerinti savo testavimo procesus. Tai taip pat teikia naudą, kaip modelis, tiesiogine to žodžio prasme, kuris nurodo, kaip testavimo procesas turėtų  palaipsniui gerėti savo efektyvumu bei kokybe. \cite{Burnstein:2010:PST:1965566} Žinoma, jog TMMi nėra vienintelis procesų vertinimo bei gerinimo modelis ar standartas, per paskutiniuosius du dešimtmečius buvo sukurti keletas tokių standartų. Vienas iš jų yra CMM - Gebėjimo Brandos Modelis (angl. Capability Maturity Model) bei jo įpėdinis Integruotas Gebėjimo Brandos Modelis (angl. Capablitiy Maturity Model Integration - CMMi). Tačiau palyginus su TMM bei TMMi daugelis šių modelių neskiria pakankamai dėmesio testavimo procesų gerinimui. 
+Testų brandos modelis buvo sukurtas, tam, kad įvairios organizacijos galėtų įvertinti bei įvertinę pagerinti savo testavimo procesus. Tai taip pat teikia naudą, kaip modelis, tiesiogine to žodžio prasme, kuris nurodo, kaip testavimo procesas turėtų  palaipsniui gerėti savo efektyvumu bei kokybe \cite{Burnstein:2010:PST:1965566}. Žinoma, jog TMMi nėra vienintelis procesų vertinimo bei gerinimo modelis ar standartas, per paskutiniuosius du dešimtmečius buvo sukurti keletas tokių standartų. Vienas iš jų yra CMM - Gebėjimo Brandos Modelis (angl. Capability Maturity Model) bei jo įpėdinis Integruotas Gebėjimo Brandos Modelis (angl. Capablitiy Maturity Model Integration - CMMi). Tačiau palyginus su TMM bei TMMi daugelis šių modelių neskiria pakankamai dėmesio testavimo procesų gerinimui. 
 
 TMMi modelis sudarytas iš penkių brandos lygių, kurie kiekvienas rodo testavimo proceso brandos būseną. Šie modelio nustatyti lygiai padeda struktūrizuotai siekti aukštesnio proceso našumo, taigi jų reikia siekti iš eilės t.y. negalima iš antrojo brandos lygio iš karto pasiekti ketvirtojo ar penktojo. Taip pat struktūrizuotas išskirstymas lygiais užtikrina, jog pasiekus aukštesnyjį lygį, žemesniajame lygyje pradėtos naudoti praktikos bus naudojamos ir toliau.
 
@@ -146,7 +150,7 @@ Testų brandos lygis nustatomas naudojantis TMMi įvertinimo modeliu (angl. TMMi
 \end{itemize}
 
 \subsubsection{Testų Brandos Modelio testų brandos lygiai}
-Testų brandos modelį apibrėžia penki brandos lygiai\cite{Burnstein:2010:PST:1965566}:
+Testų brandos modelį apibrėžia penki brandos lygiai \cite{Burnstein:2010:PST:1965566}:
 \begin{enumerate}
    \item Pradinis (angl. Initial)
    \item Fazių aiprėžimo (angl. Phase definition)
@@ -154,7 +158,7 @@ Testų brandos modelį apibrėžia penki brandos lygiai\cite{Burnstein:2010:PST:
    \item Valdymo bei vertinimo (angl. Management and Measurement)
    \item Optimizacijos arba Defektų prevencijos bei kokybės valdymo (angl. Optimisation/Defect Prevention and Quality Control)
 \end{enumerate}
-Kiekvienas iš šių lygių turi ir vidinę struktūrą Priedas nr. 1. Pirmasis brandos lygis savo struktūros neturi, nes tiesiog nurodo bazinio proceso egzistavimą, o jo pasiekimui užtenka chaotiško proceso. Kiekvieno brandos lygio brandos tikslai atspindi testavimo proceso pagerinimo tikslus, kuriuos reikia įvykdyti norint pasiekti norimą brandos lygį. Taip pat norint pasiekti aukštesnį lygį būtina įgyvendinti ir visus tikslus reikalingus pasiekti žemesnius lygius tam, kad nevyktų proceso brandos regresija ir tikrai būtų pasiektas testavimo proceso pagerinimas.\cite{Tmmi}
+Kiekvienas iš šių lygių turi ir vidinę struktūrą Priedas nr. 1. Pirmasis brandos lygis savo struktūros neturi, nes tiesiog nurodo bazinio proceso egzistavimą, o jo pasiekimui užtenka chaotiško proceso. Kiekvieno brandos lygio brandos tikslai atspindi testavimo proceso pagerinimo tikslus, kuriuos reikia įvykdyti norint pasiekti norimą brandos lygį. Taip pat norint pasiekti aukštesnį lygį būtina įgyvendinti ir visus tikslus reikalingus pasiekti žemesnius lygius tam, kad nevyktų proceso brandos regresija ir tikrai būtų pasiektas testavimo proceso pagerinimas \cite{Tmmi}.
 
 \subsubsubsection{Pirmasis brandos lygis}
 Šiame brandos lygyje operuoja visos programinės įrangos kūrėjų komandos, kurios turi bet kokį testavimo procesą. Pasiekti šį lygį užtenka chaotiško, neefektyvaus, tačiau vykdomo testavimo proceso. Šiame lygyje testai dažniausiai būna pritaikyti konkrečiai situacijai, nėra kartotini. Testavimo procesas iš esmės neturi kokybės standarto.
@@ -172,7 +176,7 @@ Pasiekus šį brandos lygmenį vykdomas visų kūrimo veiklų bei rezultatų det
 Šiame brandos lygyje visos testavimo veiklos bei rezultatai yra vertinami siekiant juos optimizuoti. Tai daroma norint nuolatos tobulinti testavimo procesą siekiant visiškos defektų prevencijos, o ne defektų taisymo.
 
 \subsubsection{Testų Brandos Modelis TMM bei Gebėjimo Brandos Modelis CMM}
-Gebėjimo brandos modelis iš pradžių buvo sudarytas, kaip įrankis objektyviai bei tiksliai įvertinti valstybinių projektų vykdytojų darbo procesų kokybę įgyvendinant užsakytą programinės įrangos projektą. Šis modelis smarkiai paremtas procesų brandos modeliu pirmą kartą aprašytu W.Humphrey knygoje „Managing the software Process“. \cite{Paulk:1993:CMM:624600.625307}
+Gebėjimo brandos modelis iš pradžių buvo sudarytas, kaip įrankis objektyviai bei tiksliai įvertinti valstybinių projektų vykdytojų darbo procesų kokybę įgyvendinant užsakytą programinės įrangos projektą. Šis modelis smarkiai paremtas procesų brandos modeliu pirmą kartą aprašytu W.Humphrey knygoje „Managing the software Process“  \cite{Paulk:1993:CMM:624600.625307}.
 
 TMM modelio struktūra yra paremta tuo kas buvo sukurta CMM modeliui, todėl abiejuose modeliuose randamos tokios pat esminės sudedamosios dalys, kaip pavyzdžiui brandos lygiai su panašiais, o kai kur ir identiškais tikslais tam lygiui pasiekti. Pažvelgus į CMM modelį kyla klausimas ar juo vertėtų naudotis šiandien, gerinant testavimo procesų kokybę nuosavame projekte? CMM ir kiti panašūs modeliai (ISO 9001, BOOT-STRAP, SPICE) tinkamai neatsižvelgia į testavimo keliamas problemas, todėl nėra tinkami konkrečių testavimo procesų gerinimui, tačiau verta pažvelgti giliau į tai, kaip CMM modelis buvo pakeistas kuriant TMM modelį.
 
@@ -184,6 +188,7 @@ Pagrindiniai CMM bei TMM skirtumai:
    \item Nepilnai apibrėžiami, ne daug minimos su kokybe susijusios problemos kaip testuojamumas, testų pakankamumo kriterijai, testavimo planavimas bei programinės įrangos sertifikavimas.
    \item Pažangesni testavimo procesai, kaip vartojimo statistikos surinkimas, statistinis testavimas bei kiekybinė testavimo proceso kontrolė yra nepakankamai aprašyti.
 \end{itemize}
+\bigskip
 Šiandien testavimas programinės įrangos kūrimo procesuose atlieka labai svarbų vaidmenį, todėl jam teikiamas toks pat, jeigu ne didesnis dėmesys, kaip programinės įrangos kūrimui. Turint tai omenyje, CMM bei jo įpėdinis CMMi tampa nepriimtini dėl dėmesio testavimo procesų gerinimui stokos.
 
 \subsection{Probleminių sričių pasiskirstymas TMMi modelyje.}
@@ -192,6 +197,7 @@ TMMi savo lygmenimis išskirsto ir funkcinį bei nefunkcinį testavimą, pvz. An
    \item Funkciniai testai: Draugiškumo vartotojui probleminė sritis, Situacinio prisitaikymo probleminė sritis, Liečiamųjų ekranų bei Įrenginių gausos probleminės sritys.
    \item Nefunkciniai testai: Ribotų išteklių probleminė sritis, Ryšio sujungiamumo probleminė sritis bei Operacinių sistemų probleminės sritys.
 \end{itemize}
+\bigskip
 Kadangi probleminių sričių testavimas lengvai išskirstomas į funkcinį bei nefunkcinį, problemines sritis nesunkiai galima išdėstyti brandos modelyje. Taip ne tik pasiekiant pilną probleminių sričių padengtumą testais, tačiau ir bendro testavimo proceso pagerinimą. Funkciniai testai, ir sritys kuriose pagrindinis dėmesys yra jiems teikiamas turėtų būti apgalvojami antrąjame brandos lygyje, o nefunkciniai testai ir sritys, kuriose pagrindinis demesys į nefunkcinius testus, patektų į trečiąjį brandos lygį.
 
 Taip atrodytų Integraciniu Testų Brandos modelių paremtas probleminių sričių testavimo modelis:
@@ -223,37 +229,12 @@ Naudojantis agiliosiomis metodologijomis nėra kuriamas detalus testavimo planas
     \label{img:tmmiagile}
 \end{figure}
 
-\sectionnonum{Rezultatai ir išvados}
-Šiame darbe buvo išnagrinėtas mobiliosios programinės įrangos kūrimas remiantis mobiliojo įrenginio apibrėžimu, taip išskiriant esminius skirtumus tarp programinės įrangos kūrimo mobiliesiems įrenginiams bei programų kūrimo stacionariems kompiuteriams, interneto programų kūrimo.
+\section{TMMi modeliu paremtas mobiliųjų programų testavimas}
+Mobiliųjų programų, ypač kuriamų remiantis agiliosiomis metodologijomis, testavimo procesų gerinimas yra gan problematiškas. Programų kūrimas vykdomas vos kelių savaičių iteracijomis, kurių metu reikia aprėpti visas problemines sritis, taip pat bazinį funkcionalumą bei regresinius testus. Kyla problema, kaip suderinti V-modeliu paremtą probleminių sričių testavimo brandos modelį, su brandos modeliu skirtu gerinti agiliuosius procesus.
 
-Atliekant tyrimą pastebėta, jog informaciją apie mobiliųjų programų kūrimą visada pateikiama per agiliųjų metodologijų prizmę, tačiau testų procesų gerinimo metodai, testų brandos modeliai, yra paremti V-modelio programinės įrangos kūrimo metodologijomis. Buvo pasirinkta strategija išskirti problemines mobiliųjų programų testavimo sritis, tuomet jas pritaikyti TMMi modeliui priskiriant atitikamam brandos lygmeniui. Ta pati strategija buvo taikoma atskirai nagrinėjant agiliasias metodologijas, siekiant rasti sprendimą, kai V-modeliu paremtas testų brandos modelis galėtų būti pritaikomas su agiliosiomis praktikomis.
+Modeliai iš esmės nėra per daug skirtingi, nes yra paremti integraciniu testų brandos modeliu, kas ir leistų juos sudėti vienas į kitą. Nors ir probleminių sričių modelis, buvo sudarytas turint omenyje visą projektą, tačiau, agiliuosius projektus skaidomus iteracijomis, galima laikyti projektų rinkiniu, kur kiekvienam iš jų taikomas agiliųjų metodologijų brandos modelis, bei paraleliai galima taikyti probleminių sričių padengtumo testais brandos modelį.
 
- Šiame darbe didžiausias demesys buvo skirtas mobiliųjų programų, skirtų išmaniesiems įrenginiams tokiems, kaip išmanieji telefonai, planšetiniai kompiuteriai, kūrimo procesui. Priežasčių, kodėl tokių programų kūrimo procesas daugelyje komandų būna neefektyvus, tyrimui. Išsiaiškinus šias priežastis, buvo siekta ieškoti sprendimų, pritaikant jau atliktus konkrečius tyrimus nagrinėjančius mobiliuosius įrenginius, mobiliųjų programų kūrimą bei testų brandos modelio taikymą, taip apjungiant naudingas tyrimų rezultatų dalis į vieną, procesą gerinantį, sprendimą.
 
-Iš pradžių buvo apibrėžta konkreti mobiliojo įrenginio sąvoka, taip išskiriant keletą esminių išskirtinumo sričių, kuriomis nereikia rūpintis kuriant programinę įrangą staliniams kompiuteriams \cite{Satyanarayanan:1996:FCM:248052.248053}:
-\begin{itemize}
-   \item Riboti skaičiavimo ištekliai (angl. limited computing resources)
-   \item Apsauga ir pažeidžiamumas
-   \item Galia (angl. performance) ir patikimumas
-   \item Riboti energijos ištekliai.
-\end{itemize}
-Remiantis šiais išskirtinumo bruožais, bei keletu tyrimų apie mobiliųjų programų kūrimą \cite{Muccini:2012:STM:2663608.2663615, 6496451} buvo išskritos esminės probleminės mobiliųjų programų testavimo sritys į kurias reikėtų kreipti daugiausiai dėmesio norint programinės įrangos kūrimo porceso pabaigoje turėti kokybišką produktą:
-\begin{itemize}
-  \item Ryšio sujungiamumo probleminė sritis;
-  \item Ribotų išteklių probleminė sritis;
-  \item Draugiškumo vartotojui probleminė sritis;
-  \item Situacinio prisitaikymo probleminė sritis;
-  \item Įrenginių gausos probleminė sritis;
-  \item Naujų operacinių sistemų versijų probleminė sritis;
-  \item Liečiamųjų ekranų probleminė sritis;
-\end{itemize}
-Kiekvienai šių sričių išskirti pagrindiniai testavimo objektai bei iššūkiai galintys kilti testavimo metu.
-
-Toliau, darbe nagrinėjama konkretus testavimpo proceso gerinimo sprendimas - TMMi, testų brandos integracinis modelis. Buvo plačiau išnagrinėtas kiekvienas iš modelyje apibrėžtų lygių, taip siekiant atrasti sąsają, tarp mobiliųjų programų kūrimo probleminių sričių, bei testavimo proceso struktūrizavimo metodų. Taip pat išnagrinėjamas CMM - gebėjimo brandos modelis, kuris buvo sukurtas dar prieš TMM, tačiau išsiaiškinta, jog CMM didelio dėmesio testavimui neskiria, todėl jis toliau darbe nenagrinėtas. Lengvesniai adaptacijai problemines sritis buvo nuspręsta išskirstyti į aprėpiančias funkcinius bei nefunkcinius reikalavimus. Ryšio sujungiamumo, ribotų išteklių, operacinių sistemų bei liečiamųjų ekranų probleminės sritys buvo apibrėžtos, kaip apimančios nefunkcinius testus. Draugiškumo vartotojui, situacinio prisitaikumo bei įrenginių gausos probleminės sritys buvo priskirtos, kaip apimančios funkcinius testus. Taip funkcinį testavimą galima lengvai integruoti į antrąjį brandos lygį, o nefunkcinį - į trečiąji. Pateiktas TMMi paremtas modelis skirtas mobiliųjų programų probleminių sričių testavimui.
-
-Kuriant TMMi paremtą modelį probleminėms sritims iškilo dar viena problema - metodologijų nesuderinamumas. Daugelis mobiliųjų programų yra kuriamos agiliosiomis metodologijomis paremtu kūrimo procesu, kuriame daug dėmesio nekreipiama į dokumentavima. TMMi glaudžiai paremtas V-modeliu, kuriame programų kūrimas vyksta ne iteracijomis tačiau etapais, nuo planavimo iki sistemos testavimo, kiekviename etape iki testavimo pradžios daug dokumentuojant, taip sudarant pagrindą daugeliui testų. Buvo priimtas sprendimas vieną agiliąją programos kūrimo iteraciją laikyti atskiru projektu, paremtu V-modeliu. Ir kiekvienai agiliajai iteracijai būdingus bruožus pritaikyti jų V-modelio atitikmenims. Taip gaunant iteracinį testų brandos modelį, kuris testavimo procesą gerina kiekvienai iteracijai atskirai, bei visam projektui po kiekvienos iteracijos.
-
-Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis konkrečioms probleminėms sritims, kitas, agiliojo proceso adaptacija į testų brandos modelį. Abu modeliai yra paremti integruotuoju testų brandos modeliu todėl tarpusavyje suderinami. Juos galima įgyvendinti tarpusavyje, paraleliai siekiant geresnio agiliojo proceso bei pilno probleminio sričių padengtumo testais.
 
 \begin{figure}[H]
     \centering
@@ -262,10 +243,29 @@ Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis
     \label{img:agilemobile}
 \end{figure}
 
-Galutinis Mobiliųjų programų testavimo modelis, aprėpiantis pagrindines problemines mobiliosios programinės įrangos sritis bei aprėpiantis mobiliųjų programų kūrimą agiliosiomis metodikomis.
+\sectionnonum{Rezultatai ir išvados}
+Šiame darbe darbe buvo išnagrinėtas mobiliosos programinė įrangos kūrimas remiantis mobiliojo įrenginio apibrėžimu, taip išskiriant esminius skirtumus nuo programinės įrangos stacionariesiems įrenginiams bei išskiriant problemines sritis. Didžiausias dėmesys darbe skiriamas išmaniųjų įrenginių, tokių kaip išmanieji telefonai bei planšetiniai kompiuteriai programinės įrangos kūrimo procesams, ieškant priežasčių, kodėl tokių programų kūrimo bei testavimo procesa daugelyje komandų gali būti neefektyvūs. Ištyrus tokį programinės įrangos kūrimo konteksta buvo ieškota programinės įrangos kūrėjų komandos efektyvumo bei darbo struktūrizavimo sprendimo remiantis integruotuoju testų brandos modeliu.
+
+\begin{enumerate}
+\item  Apibrėžta konkreti mobiliojo įrenginio sąvoka, taip išskiriant keletą esminių išskirtinumo sričių, kuriomis nereikia rūpintis kuriant programinę įrangą staliniams kompiuteriams \cite{Satyanarayanan:1996:FCM:248052.248053}.
+
+\item Remiantis šiais išskirtinumo bruožais, bei keletu tyrimų apie mobiliųjų programų kūrimą buvo išskritos esminės probleminės mobiliųjų programų testavimo sritys į kurias reikėtų kreipti daugiausiai dėmesio norint programinės įrangos kūrimo porceso pabaigoje turėti kokybišką produktą  \cite{Muccini:2012:STM:2663608.2663615, 6496451}. Kiekvienai iš išskirtų sričių išskirti pagrindiniai testavimo objektai bei iššūkiai galintys kilti testavimo metu.
+
+\item Nagrinėjama konkretus testavimpo proceso gerinimo sprendimas - TMMi, testų brandos integracinis modelis. Buvo plačiau išnagrinėtas kiekvienas iš modelyje apibrėžtų lygių, taip siekiant atrasti sąsają, tarp mobiliųjų programų kūrimo probleminių sričių, bei testavimo proceso struktūrizavimo metodų. Taip pat išnagrinėjamas CMM - gebėjimo brandos modelis, kuris buvo sukurtas dar prieš TMM, tačiau išsiaiškinta, jog CMM didelio dėmesio testavimui neskiria, todėl jis toliau darbe nenagrinėtas.
+
+\item Probleminės mobiliųjų programų testavimo sritys buvo išskirtytos į aprėpiančias funkcinius bei nefunkcinius reikalavimus, taip problemines sritis adaptuojant TMMi brandos lygiams atitinkantiems funkcinius bei nefunkcinius testus. Pateiktas TMMi paremtas modelis skirtas mobiliųjų programų probleminių sričių testavimui.
+
+\item Kuriant TMMi paremtą modelį probleminėms sritims iškilo dar viena problema - metodologijų nesuderinamumas. Daugelis mobiliųjų programų yra kuriamos agiliosiomis metodologijomis paremtu kūrimo procesu, tačiau TMMi glaudžiai paremtas V-modeliu. Buvo priimtas sprendimas vieną agiliąją programos kūrimo iteraciją laikyti atskiru projektu, paremtu V-modeliu. Ir kiekvienai agiliajai iteracijai būdingus bruožus pritaikyti jų V-modelio atitikmenims. Gautas iteracinisį testų brandos modelis, kuris testavimo procesą gerina kiekvienai iteracijai atskirai, bei visam projektui po kiekvienos iteracijos.
+
+\item Išskirti du esminiai testavimo procesui gerinti skirti modeliai: vienas modelis konkrečioms probleminėms sritims, kitas, agiliojo proceso adaptacija į testų brandos modelį. Abu modeliai yra paremti integruotuoju testų brandos modeliu todėl tarpusavyje suderinami. Juos galima įgyvendinti tarpusavyje, paraleliai siekiant geresnio agiliojo proceso bei pilno probleminio sričių padengtumo testais.
+\end{enumerate}
+\bigskip
+Ištyrus mobiliųjų programų kūrimo sritį aiškiomis tampa keletą problemų: vartotojai tikisi dažnų programinės įrangos atnaujinimų, tačiau nori, jog programinė įrangą mobiliajame įrenginyje kainuotų dešimteriopai mažiau ar iš viso nemokamai, negu tokios programinės įrangos atitikmuo staliniame kompiuteryje. Tokie vartotojų lūkesčiai verčia mobiliųjų programų kūrėjus taupyti laiką mažinant su kodo rašyimu nesisijusių procesų sąskaitą arba renkantis dirbti pagal agiliasias metodologijas.
+
+ Darbe struktūrizuotas pagrindinių probleminių sričių testavimas, bei struktūrizuotas programinės įrangos kūrimas remiantis agiliosiomis metodologijomis viską pateikiant TMMi paremtame brandos lygių modelyje, kuris leis komandai struktūrizuotai gerinti testavimo, bei kitus procesus iteracija, po iteracijos.
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.75]{img/FinalTMMi}
+    \includegraphics[scale=0.70]{img/FinalTMMi}
     \caption{Galutinis TMMi paremtas modelis aprėpiantis pagrindines mobiliųjų programų kūrimo problemas.}
     \label{img:finaltmmi}
 \end{figure}
@@ -279,29 +279,29 @@ Galutinis Mobiliųjų programų testavimo modelis, aprėpiantis pagrindines prob
 
 % \sectionnonum{Sąvokų apibrėžimai}
 \sectionnonum{Žodynas}
-Agile - 
+Agiliosios metodologijos (angl. Agile) - Tokios programų sistemų kūrimo metodologijos, kai reikalavimai ir sprendimai keičiasi, proceso eigoje prisitaikant prie situacijos.
 
-Atsako laikas - 
+Atsako laikas (angl. Response Time) - Laiko vienetas per kurį prietaisas ar sistema sureaguoja į įvestį.
 
-Dinaminis testavimas - 
+Dinaminis testavimas (angl. Dynamic Testing) - Tai tokia testavimo rūšis, kai paleidus kodą analizuojamas jo eglesys.
 
-EDGE - 
+EDGE (angl. Enhanced Data rates for GSM Evolution) - Nauja GPRS tinklo iteracija, kuri teoriškai galėjo pasiekti 120Kbps-384Kbps interneto greičius.
 
-GPRS - 
+GPRS (angl. General Packet Radio Services) -  Paketais paremta bevielio komunikavimo paslauga, kuri teoriškai gali pasiekti 56Kbps-114Kbps atsiuntimo greičius ir nuolatinę prieigą prie interneto mobiliųjų įrenginių, bei kompiuterių naudotojams.
 
-NFC (Near Field Communication) - 
+NFC (angl. Near Field Communication) - Bevielio duomenų perdavimo technologija, paremta mažo atstumo tarp įrenginių sujungiamumu, ir nereikalaujanti interneto.
 
-PDA (Personal Digital Assistant) - 
+PDA (angl. Personal Digital Assistant) - dar vadinami rankiniais kompiuteriais, tai mobilieji įrenginiai, skirti asmeninės informacijos tvarkymui.
 
-Programinės įrangos kūrimo gyvavimo ciklas - 
+Programinės įrangos kūrimo gyvavimo ciklas (angl. Developement lice cycle)- tai sąvoka apibrėžianti planavimo, programinės įrangos kūrimo, testavimo bei paleidimo procesus.
 
-Statinis testavimas - 
+Statinis testavimas (angl. Static Testing) - Tai testavimo metodas, kurio metu nėra paleidžiamas programos kodas. Atliekamos kodo bei dokumentacijos peržiūros.
 
-Tiriamasis testavimas - 
+Tiriamasis testavimas (angl. Exploratory testing) - Nestruktūrizuotas testavimo metodas, kuomet testuotojas turi pilną laisvę testuoti remiantis tik savo patirtimi.
 
-V-modelis - 
+V-modelis - tai tokia programų kūrimo metodologija, galima vadinti krioklio išplėtimu, kur iš pradžių apibrėžiami visi reikalavimai projektui, vykdomas planavimas, tuomet programavimas, ir galiausiai projekto pabaigoje - testavimas. Kiekviename iš kūrimo žingsnių planuojant skirtingą testavimo sritį.
 
-Waterfall - 
+„Krioklio“ metodologija (angl. Waterfall) - Tai nuosekli (ne iteratyvi) programų kūrimo metodologija, kuomet programų kūrimo procesas „teka žemyn“, t.y. kiekviena sritis vykdoma paeiliui. Idėjos sukūrimas, projekto pradžia, analizė, planavimas, kūrimas, testavimas, produkto išleidimas ir galiausiai palaikymas.
 
 \appendix  % Priedai
 % Prieduose gali būti pateikiama pagalbinė, ypač darbo autoriaus savarankiškai
